// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Badge / NotificationBadge Badge With Animation 1`] = `
Array [
  .c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 24px;
  background-color: #0046FF;
  border-radius: 24px;
}

.c8 {
  -webkit-animation: scale 0.5s ease-out;
  animation: scale 0.5s ease-out;
  padding: 0 6px;
  min-width: 24px;
}

.c0 {
  padding-bottom: 20px;
  background-color: transparent;
}

.c2 {
  padding-top: 12px;
  padding-bottom: 12px;
  background-color: transparent;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #FFFFFF;
  color: #0046FF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid #0046FF;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c5:hover {
  color: hsl(223.5,100%,40%);
}

.c5:hover::before {
  border-color: hsl(223.5,100%,40%);
}

.c5:active {
  color: hsl(223.5,100%,35%);
}

.c5:active::before {
  border-color: hsl(223.5,100%,35%);
}

.c4 {
  width: 200px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Badge with animation
    </span>
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      >
        <button
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c6"
            >
              -
            </span>
          </span>
        </button>
        <span
          className="c7 c8"
        >
          <span
            className="c9"
          >
            4
          </span>
        </span>
        <button
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c6"
            >
              +
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  .c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 24px;
  background-color: #0046FF;
  border-radius: 24px;
}

.c8 {
  padding: 0 6px;
  min-width: 24px;
}

.c0 {
  padding-bottom: 20px;
  background-color: transparent;
}

.c2 {
  padding-top: 12px;
  padding-bottom: 12px;
  background-color: transparent;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #FFFFFF;
  color: #0046FF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid #0046FF;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c5:hover {
  color: hsl(223.5,100%,40%);
}

.c5:hover::before {
  border-color: hsl(223.5,100%,40%);
}

.c5:active {
  color: hsl(223.5,100%,35%);
}

.c5:active::before {
  border-color: hsl(223.5,100%,35%);
}

.c4 {
  width: 200px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Badge with animation, but without initial animation example
    </span>
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      >
        <button
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c6"
            >
              -
            </span>
          </span>
        </button>
        <span
          className="c7 c8"
        >
          <span
            className="c9"
          >
            4
          </span>
        </span>
        <button
          className="NormalizedButton__Button-sc-ey7f5x-0 c5"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c6"
            >
              +
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Molecules / Badge / NotificationBadge Common Badge Use Cases 1`] = `
Array [
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

@media (min-width:760px) {
  .c0 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {

}

<span
    className="c0"
  >
    Number with limit
  </span>,
  .c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 24px;
  background-color: #0046FF;
  border-radius: 24px;
}

.c2 {
  padding: 0 6px;
  min-width: 24px;
}

.c0 {
  margin-top: 8px;
  margin-bottom: 8px;
  background-color: transparent;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

<div
    className="c0"
  >
    <span
      className="c1 c2"
    >
      <span
        className="c3"
      >
        99+
      </span>
    </span>
  </div>,
  .c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 24px;
  background-color: #0046FF;
  border-radius: 24px;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 8px;
  background-color: #0046FF;
  border-radius: 8px;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 8px;
  background-color: #FF1900;
  border-radius: 8px;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 8px;
  background-color: #6E6E69;
  border-radius: 8px;
}

.c6 {
  padding: 0 6px;
  min-width: 24px;
}

.c9 {
  min-width: 8px;
}

.c2 {
  margin-top: 8px;
  margin-bottom: 8px;
  background-color: transparent;
}

.c0 {
  margin-top: 32px;
  margin-bottom: 32px;
  background-color: transparent;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

@media (min-width:760px) {
  .c1 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {
  .c3 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Text with badge
    </span>
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Text with numbered badge
      </span>
      <div
        className="c2"
      >
        <span
          className="c4"
        >
          Orders 
          <span
            className="c5 c6"
          >
            <span
              className="c7"
            >
              7
            </span>
          </span>
        </span>
      </div>
    </div>
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Text with small badge
      </span>
      <div
        className="c2"
      >
        <span
          className="c8 c9"
        />
        <span
          className="c4"
        >
           Buy order
        </span>
      </div>
      <div
        className="c2"
      >
        <span
          className="c10 c9"
        />
        <span
          className="c4"
        >
           Sell order
        </span>
      </div>
      <div
        className="c2"
      >
        <span
          className="c11 c9"
        />
        <span
          className="c4"
        >
           Exchange order
        </span>
      </div>
    </div>
  </div>,
  .c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 24px;
  background-color: #0046FF;
  border-radius: 24px;
}

.c6 {
  padding: 0 6px;
  min-width: 24px;
}

.c2 {
  margin-top: 8px;
  margin-bottom: 8px;
  background-color: transparent;
}

.c0 {
  margin-top: 32px;
  margin-bottom: 32px;
  background-color: transparent;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

@media (min-width:760px) {
  .c1 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {
  .c3 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Aria-label
    </span>
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Badge with Aria-label
      </span>
      <div
        className="c2"
      >
        <span
          className="c4"
        >
          Orders
           
          <span
            aria-label="7 new orders"
            className="c5 c6"
          >
            <span
              className="c7"
            >
              7
            </span>
          </span>
        </span>
      </div>
      <span
        className="c3"
      >
        Badge without aria-label
      </span>
      <div
        className="c2"
      >
        <span
          className="c4"
        >
          Orders 
          <span
            className="c5 c6"
          >
            <span
              className="c7"
            >
              7
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Molecules / Badge / NotificationBadge Default Showcase 1`] = `
Array [
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

@media (min-width:760px) {
  .c0 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {

}

<span
    className="c0"
  >
    Default Notification Badge
  </span>,
  .c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 24px;
  background-color: #0046FF;
  border-radius: 24px;
}

.c2 {
  padding: 0 6px;
  min-width: 24px;
}

.c0 {
  margin-top: 8px;
  margin-bottom: 8px;
  background-color: transparent;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

<div
    className="c0"
  >
    <span
      className="c1 c2"
    >
      <span
        className="c3"
      >
        1
      </span>
    </span>
  </div>,
  .c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 8px;
  background-color: #0046FF;
  border-radius: 8px;
}

.c3 {
  min-width: 8px;
}

.c0 {
  margin-top: 8px;
  margin-bottom: 8px;
  background-color: transparent;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

@media (min-width:760px) {

}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Default empty Badge
    </span>
    <div
      className="c0"
    >
      <span
        className="c2 c3"
      />
    </div>
  </div>,
  .c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 24px;
  background-color: #0046FF;
  border-radius: 24px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 16px;
  background-color: #0046FF;
  border-radius: 16px;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 32px;
  background-color: #0046FF;
  border-radius: 32px;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 40px;
  background-color: #0046FF;
  border-radius: 40px;
}

.c7 {
  padding: 0 6px;
  min-width: 24px;
}

.c4 {
  padding: 0 4px;
  min-width: 16px;
}

.c10 {
  padding: 0 6px;
  min-width: 32px;
}

.c14 {
  padding: 0 4px;
  min-width: 40px;
}

.c0 {
  margin-top: 8px;
  margin-bottom: 8px;
  background-color: transparent;
}

.c2 {
  margin-bottom: 4px;
  background-color: transparent;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 10px;
  line-height: 1.6;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

@media (min-width:760px) {
  .c1 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {

}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Badge with different size
    </span>
    <div
      className="c2"
    >
      <span
        className="c3 c4"
      >
        <span
          className="c5"
        >
          1
        </span>
      </span>
    </div>
    <div
      className="c2"
    >
      <span
        className="c6 c7"
      >
        <span
          className="c8"
        >
          2
        </span>
      </span>
    </div>
    <div
      className="c2"
    >
      <span
        className="c9 c10"
      >
        <span
          className="c11"
        >
          3
        </span>
      </span>
    </div>
    <span
      className="c12"
    >
      Custom badge size (defaults font-size to 'tertiary'):
    </span>
    <div
      className="c2"
    >
      <span
        className="c13 c14"
      >
        <span
          className="c8"
        >
          4
        </span>
      </span>
    </div>
  </div>,
  .c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 24px;
  background-color: #00D200;
  border-radius: 24px;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 24px;
  background-color: #FF1900;
  border-radius: 24px;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 24px;
  background-color: #A0A09B;
  border-radius: 24px;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 8px;
  background-color: #00D200;
  border-radius: 8px;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 8px;
  background-color: #FF1900;
  border-radius: 8px;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 8px;
  background-color: #A0A09B;
  border-radius: 8px;
}

.c4 {
  padding: 0 6px;
  min-width: 24px;
}

.c9 {
  min-width: 8px;
}

.c0 {
  margin-top: 8px;
  margin-bottom: 8px;
  background-color: transparent;
}

.c2 {
  margin-bottom: 4px;
  background-color: transparent;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

@media (min-width:760px) {
  .c1 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {

}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Custom background colors
    </span>
    <div
      className="c0"
    >
      <div
        className="c2"
      >
        <span
          className="c3 c4"
        >
          <span
            className="c5"
          >
            2
          </span>
        </span>
      </div>
      <div
        className="c2"
      >
        <span
          className="c6 c4"
        >
          <span
            className="c5"
          >
            3
          </span>
        </span>
      </div>
      <div
        className="c2"
      >
        <span
          className="c7 c4"
        >
          <span
            className="c5"
          >
            4
          </span>
        </span>
      </div>
    </div>
    <div
      className="c0"
    >
      <div
        className="c2"
      >
        <span
          className="c8 c9"
        />
      </div>
      <div
        className="c2"
      >
        <span
          className="c10 c9"
        />
      </div>
      <div
        className="c2"
      >
        <span
          className="c11 c9"
        />
      </div>
    </div>
  </div>,
  .c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 24px;
  background-color: #0046FF;
  border-radius: 24px;
}

.c4 {
  padding: 0 6px;
  min-width: 24px;
}

.c0 {
  margin-top: 8px;
  margin-bottom: 8px;
  background-color: transparent;
}

.c2 {
  background-color: transparent;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFCF00;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

@media (min-width:760px) {
  .c1 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {

}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Custom text color
    </span>
    <div
      className="c2"
    >
      <span
        className="c3 c4"
      >
        <span
          className="c5"
        >
          5
        </span>
      </span>
    </div>
  </div>,
  .c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 24px;
  background-color: #0046FF;
  border-radius: 24px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 16px;
  background-color: #0046FF;
  border-radius: 16px;
}

.c7 {
  padding: 0 6px;
  min-width: 24px;
}

.c4 {
  padding: 0 4px;
  min-width: 16px;
}

.c0 {
  margin-top: 8px;
  margin-bottom: 8px;
  background-color: transparent;
}

.c2 {
  margin-bottom: 4px;
  background-color: transparent;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 700;
  font-size: 10px;
  line-height: 1.6;
}

@media (min-width:760px) {
  .c1 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {

}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Badge with large number
    </span>
    <div
      className="c2"
    >
      <span
        className="c3 c4"
      >
        <span
          className="c5"
        >
          99
        </span>
      </span>
    </div>
    <div
      className="c2"
    >
      <span
        className="c6 c7"
      >
        <span
          className="c8"
        >
          99
        </span>
      </span>
    </div>
    <div
      className="c2"
    >
      <span
        className="c6 c7"
      >
        <span
          className="c8"
        >
          123
        </span>
      </span>
    </div>
  </div>,
]
`;

exports[`Storyshots Molecules / Badge / NotificationBadge Specialized Children 1`] = `
Array [
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

@media (min-width:760px) {
  .c0 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {

}

<span
    className="c0"
  >
    Component as child
  </span>,
  .c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 24px;
  background-color: #0046FF;
  color: #FFFFFF;
  border-radius: 24px;
}

.c2 {
  padding: 0 6px;
  min-width: 24px;
}

.c0 {
  margin-top: 8px;
  margin-bottom: 8px;
  background-color: transparent;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

@media (min-width:760px) {

}

@media (min-width:760px) {
  .c3 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
    className="c0"
  >
    <span
      className="c1 c2"
    >
      <span
        className="c3"
      >
        8
      </span>
      <span
        className="c4"
      >
        %
      </span>
    </span>
  </div>,
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 10px;
  line-height: 1.6;
}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

<p
    className="c0"
  >
    * It's up to developer to set child component font (family, size, etc.)
  </p>,
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

@media (min-width:760px) {
  .c0 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {

}

<span
    className="c0"
  >
    Function as child
  </span>,
  .c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 24px;
  background-color: #0046FF;
  color: #FFFFFF;
  border-radius: 24px;
}

.c2 {
  padding: 0 6px;
  min-width: 24px;
}

.c0 {
  margin-top: 8px;
  margin-bottom: 8px;
  background-color: transparent;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FFFFFF;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

<div
    className="c0"
  >
    <span
      className="c1 c2"
    >
      <span
        className="c3"
      >
        9%
      </span>
    </span>
  </div>,
  .c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 10px;
  line-height: 1.6;
}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

<p
    className="c0"
  >
    * It's up to developer to set child function font (family, size, etc.)
  </p>,
]
`;
